strapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  namespace: strapi
  labels:
    app: strapi
    type: backend
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
        type: backend
    spec:
      containers:
      - image: strapi/strapi
        name: strapi
        resources:
          limits:
            memory: 1Gi
            cpu: 2
        ports:
        - containerPort: 1337
          name: strapi   
        readinessProbe:
          httpGet:
            path: /
            port: 1337
          initialDelaySeconds: 10
          periodSeconds: 5
