strapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi
  namespace: strapi
spec:
  type: ClusterIP
  ports:
    - port: 1337
      targetPort: 1337
  selector:
    app: strapi
