strapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prd
  name: strapi
  namespace: strapi
spec:
  rules:
  - host: PATH
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: strapi
            port:
              number: 1337
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - PATH
    secretName: starpi-cert # < cert-manager will store the created certificate in this secret.
